<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/edTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_background_2"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTextSecondName"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background_2"
        android:ems="10"
        android:hint="@string/sec_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edTextName"
        app:layout_constraintStart_toStartOf="@+id/edTextName"
        app:layout_constraintTop_toBottomOf="@+id/edTextName" />

    <EditText
        android:id="@+id/edTextTelNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background_2"
        android:ems="10"
        android:hint="@string/tel_numb"
        android:inputType="phone"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edTextName"
        app:layout_constraintStart_toStartOf="@+id/edTextName"
        app:layout_constraintTop_toBottomOf="@+id/edTextSecondName" />

    <EditText
        android:id="@+id/edDescryption"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_background_2"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/notes"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cbSpecial"
        app:layout_constraintEnd_toEndOf="@+id/edTextName"
        app:layout_constraintStart_toStartOf="@+id/edTextName"
        app:layout_constraintTop_toBottomOf="@+id/cbNormal" />

    <CheckBox
        android:id="@+id/cbImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="onClickcb1"
        android:text="@string/important"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cbNormal"
        app:layout_constraintEnd_toStartOf="@+id/cbNormal"
        app:layout_constraintTop_toTopOf="@+id/cbNormal" />

    <CheckBox
        android:id="@+id/cbNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClickcb2"
        android:text="@string/normal"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextTelNumber" />

    <CheckBox
        android:id="@+id/cbNoImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="onClickcb3"
        android:text="@string/no_important"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cbNormal"
        app:layout_constraintStart_toEndOf="@+id/cbNormal"
        app:layout_constraintTop_toTopOf="@+id/cbNormal" />

    <CheckBox
        android:id="@+id/cbSpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/special"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:backgroundTint="@color/blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />
</androidx.constraintlayout.widget.ConstraintLayout>